--- a/webapp/backend/app/templates/myactivity.html
+++ b/webapp/backend/app/templates/myactivity.html
@@ -95,13 +95,14 @@
                                                         <li class="list-group-item">
                                                             活动日期：{{activity.date}}-{{activity.enddate}}<a href="#"
                                                                 class="btn btn-success" style="float:right">修改</a></li>
-                                                        <li class="list-group-item">活动时间：{{activity.time}}-{{activity.endtime}}<a href="#"
+                                                        <li class="list-group-item">
+                                                            活动时间：{{activity.time}}-{{activity.endtime}}<a href="#"
                                                                 class="btn btn-success" style="float:right">修改</a></li>
                                                         <li class="list-group-item">活动类别：公益 <a href="#"
                                                                 class="btn btn-success" style="float:right">修改</a></li>
-                                                        <li class="list-group-item">管理单位：{{activity.teamActivities.Team.teamname}} <a
-                                                                href="#" class="btn btn-success"
-                                                                style="float:right">修改</a></li>
+                                                        <li class="list-group-item">
+                                                            管理单位：{{activity.teamActivities.Team.teamname}} <a href="#"
+                                                                class="btn btn-success" style="float:right">修改</a></li>
                                                         <li class="list-group-item">负责人：{{activity.manageperson}}<a
                                                                 href="#" class="btn btn-success"
                                                                 style="float:right">修改</a></li>
@@ -606,7 +607,8 @@
                                                 <li class="list-group-item">微信号：{{userActivity.user.wx}}</li>
                                                 <li class="list-group-item">邮箱：{{userActivity.user.email}}</li>
                                                 <li class="list-group-item">联系电话：{{userActivity.user.phone}} </li>
-                                                <li class="list-group-item">加入项目：{{activity.title}}（{{activity.id}}）</li>
+                                                <li class="list-group-item">加入项目：{{activity.title}}（{{activity.id}}）
+                                                </li>
                                                 <li class="list-group-item">工作职位：工作岗位</li>
                                                 <li class="list-group-item">工作时间：工作时间</li>
                                                 <li class="list-group-item"><a href="#" class="btn btn-danger"
@@ -629,7 +631,7 @@
     </div>
     {% endfor %}
 
-<!--div class="modal fade" id="personModal" tabindex="-1" role="dialog" aria-labelledby="personModalLabel"
+    <!--div class="modal fade" id="personModal" tabindex="-1" role="dialog" aria-labelledby="personModalLabel"
             aria-hidden="true">
             <div class="modal-dialog modal-lg">
                 <div class="modal-content">
@@ -688,65 +690,68 @@
                 </div>
             </div>
         </div-->
-{% endfor %}
+    {% endfor %}
 
-<!-- Container fluid  -->
-<!-- ============================================================== -->
-<div class="container-fluid">
+    <!-- Container fluid  -->
     <!-- ============================================================== -->
-    <!-- Start Page Content -->
-    <!-- ============================================================== -->
-    <div class="row">
-        <div class="col-12">
-            <div class="card">
-                <div class="card-body">
-                    <h4 class="card-title">项目列表</h4>
-                    <h6 class="card-subtitle">您可以查看您的志愿活动信息</h6>
-                    <div class="table-responsive">
-                        <table class="table">
-                            <thead>
-                                <tr>
-                                    <th scope="col" style='text-align: center;'>项目</th>
-                                    <th scope="col">项目编号</th>
-                                    <th scope="col">管理单位</th>
-                                    <th scope="col">活动类别</th>
-                                    <th scope="col">负责人</th>
-                                    <th scope="col">状态</th>
-                                    <th scope="col">开始日期</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                {% for activity in activities %}
-                                <tr style="cursor:pointer;" onclick="$('#{{activity.id}}').modal('toggle')">
-                                    <td class=“w-25”>
-                                        <div class="card mb-3" style="max-width: 450px;">
-                                            <div class="row no-gutters">
-                                                <div class="col-md-4">
-                                                    <img src="../static/img/myactivity/thu2.jpeg" class="d-block w-100"
-                                                        alt="...">
-                                                </div>
-                                                <div class="col-md-8">
-                                                    <div class="card-body">
-                                                        <h5 class="card-title">{{activity.title}}</h5>
-                                                        <p class="card-text">
-                                                            {{activity.title}}</p>
-                                                        <p class="card-text"><small class="text-muted">更新于3分钟之前</small>
-                                                        </p>
+    <div class="container-fluid">
+        <!-- ============================================================== -->
+        <!-- Start Page Content -->
+        <!-- ============================================================== -->
+        <div class="row">
+            <div class="col-12">
+                <div class="card">
+                    <div class="card-body">
+                        <h4 class="card-title">项目列表</h4>
+                        <h6 class="card-subtitle">您可以查看您的志愿活动信息</h6>
+                        <div class="table-responsive">
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <th scope="col" style='text-align: center;'>项目</th>
+                                        <th scope="col">项目编号</th>
+                                        <th scope="col">管理单位</th>
+                                        <th scope="col">活动类别</th>
+                                        <th scope="col">负责人</th>
+                                        <th scope="col">状态</th>
+                                        <th scope="col">开始日期</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {% for activity in activities %}
+                                    <tr style="cursor:pointer;" onclick="$('#{{activity.id}}').modal('toggle')">
+                                        <td class=“w-25”>
+                                            <div class="card mb-3" style="max-width: 450px;">
+                                                <div class="row no-gutters">
+                                                    <div class="col-md-4">
+                                                        <img src="../static/img/myactivity/thu2.jpeg"
+                                                            class="d-block w-100" alt="...">
+                                                    </div>
+                                                    <div class="col-md-8">
+                                                        <div class="card-body">
+                                                            <h5 class="card-title">{{activity.title}}</h5>
+                                                            <p class="card-text">
+                                                                {{activity.title}}</p>
+                                                            <p class="card-text"><small
+                                                                    class="text-muted">更新于3分钟之前</small>
+                                                            </p>
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
-                                        </div>
 
-                                    </td>
-                                    <td style='vertical-align: middle;'>{{activity.id}}</td>
-                                    <td style='vertical-align: middle;'>{{activity.managerperson}}</td>
-                                    <td style='vertical-align: middle;'>公益</td>
-                                    <td style='vertical-align: middle;'>{{activity.manager}}</td>
-                                    <td style='vertical-align: middle;'>{{activity.state}}</td>
-                                    <td style='vertical-align: middle;'>{{activity.date}}</td>
-                                </tr>
-                                {% endfor %}
-                                <!--tr style="cursor:pointer;" onclick="$('#exampleModal').modal('toggle')">
+                                        </td>
+                                        <td style='vertical-align: middle;'>{{activity.id}}</td>
+                                        <td style='vertical-align: middle;'>{{activity.managerperson}}</td>
+                                        <td style='vertical-align: middle;'>公益</td>
+                                        <td style='vertical-align: middle;'>{{activity.manager}}</td>
+                                        <td style='vertical-align: middle;'>{{activity.state}}</td>
+                                        <td style='vertical-align: middle;'>{{activity.date}}</td>
+                                    </tr>
+                                    {% endfor %}
+                                    {%import 'activitypages.html' as pg%}
+                                    {{pg.my_paginate(pagination,'myactivity.html')}}
+                                    <!--tr style="cursor:pointer;" onclick="$('#exampleModal').modal('toggle')">
                                     <td class=“w-25”>
                                         <div class="card mb-3" style="max-width: 450px;">
                                             <div class="row no-gutters">
@@ -830,32 +835,32 @@
                                     <td style='vertical-align: middle;'>待审核</td>
                                     <td style='vertical-align: middle;'>2019.11.24</td>
                                 </tr-->
-                            </tbody>
-                        </table>
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+        <!-- ============================================================== -->
+        <!-- End PAge Content -->
+        <!-- ============================================================== -->
+        <!-- ============================================================== -->
+        <!-- Right sidebar -->
+        <!-- ============================================================== -->
+        <!-- .right-sidebar -->
+        <!-- ============================================================== -->
+        <!-- End Right sidebar -->
+        <!-- ============================================================== -->
     </div>
     <!-- ============================================================== -->
-    <!-- End PAge Content -->
+    <!-- End Container fluid  -->
     <!-- ============================================================== -->
     <!-- ============================================================== -->
-    <!-- Right sidebar -->
+    <!-- footer -->
     <!-- ============================================================== -->
-    <!-- .right-sidebar -->
     <!-- ============================================================== -->
-    <!-- End Right sidebar -->
+    <!-- End footer -->
     <!-- ============================================================== -->
-</div>
-<!-- ============================================================== -->
-<!-- End Container fluid  -->
-<!-- ============================================================== -->
-<!-- ============================================================== -->
-<!-- footer -->
-<!-- ============================================================== -->
-<!-- ============================================================== -->
-<!-- End footer -->
-<!-- ============================================================== -->
 </div>
 {% endblock %}
